@@ -1,0 +1,2 @@
+COPYRIGHT HOLDER: Open Analytics NV
+YEAR: 2018
