@@ -2,11 +2,11 @@ Package: patientProfilesVisShiny
 Type: Package
 Title: Shiny application for visualization of patient profiles
 Version: 0.0.9
-Date: 2018-10-01
+Date: 2018-10-22
 Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: This package contains a shiny application to visualize patient profiles.
-License: Software for Internal Use at Open Analytics NV
+License: file LICENSE
 Imports: 
 	shiny, patientProfilesVis, tools, plyr, glpgUtilityFct
 Suggests:
